<resources>
    <string name="app_name">Note Timer</string>
    <string name="type_your_task">Type your task…</string>
    <string name="start_timer">Start timer</string>
    <string name="show_timer_in_notification">Show timer in notification</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add_task">Add Task</string>
    <string name="stop_running_timer">Stop timer which is already running?</string>
    <string name="not_supported">Not supported</string>
    <string name="task_finished">This task is already finished</string>
    <string name="exit">Exit</string>
    <string name="pause">PAUSE</string>
    <string name="done_caps">DONE</string>
    <string name="play">PLAY</string>
    <string name="running_task">Running</string>
    <string name="paused_tasks">Paused</string>
    <string name="pending_tasks">Pending</string>
    <string name="finished_tasks">Finished</string>
</resources>
